--- a/code/style.css
+++ b/code/style.css
@@ -34,8 +34,8 @@ nav a {
   color: #575555;
   padding: 23px 30px;
   text-decoration: none;
-  font-size: 16px;
-  font-family: sans-serif;
+  font-size: 14px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   letter-spacing: 3px;
   align-self: flex-end;
 }
@@ -67,6 +67,7 @@ h1 {
 .big-news img {
   max-width: 45%;
 }
+
 
 .big-news .news-text {
   margin-left: 20px;
@@ -103,7 +104,7 @@ h3 {
 }
 
 article {
-  flex-basis: 22%;
+  flex-basis: 20%;
   margin: 12px;
   padding: 8px;
   justify-content: space-evenly;
@@ -178,13 +179,13 @@ h2 {
 /**** TABLET ****/
 
 @media screen and (max-width: 992px) and (min-width: 668px) {
+  .linkleft {
+    order: 0;
+  }
+
   .logo {
     order: 1;
     flex-grow:0;
-  }
-
-  .linkleft {
-    order: 0;
   }
 
   .linkright {
@@ -216,9 +217,8 @@ h2 {
   }
 
   article {
-    flex-basis: 39%;
+    flex-basis: 42%;
     margin: 18px;
-    border: #fff solid 10px;
     background-size: cover;
     background-position: center;
   }  
@@ -276,7 +276,7 @@ h2 {
 
   h1 {
     font-family: "didot";
-    font-size: 24px;
+    font-size: 20px;
     color: #4e4e4e;
     text-align: center;
     font-weight: bold;
@@ -292,10 +292,54 @@ h2 {
 
   article {
     width: auto;
-    border: #fff solid 10px;
     background-size: cover;
     background-position: center;
   }
   
+}
+
+/*** HIGHLIGHT IMAGE ANIMATION ***/
+
+.logo img {
+    margin-top: 25px;
+    font-size: 21px;
+    text-align: center;
+    animation: fadein 8s;
+    -moz-animation: fadein 8s; /* Firefox */
+    -webkit-animation: fadein 8s; /* Safari and Chrome */
+    -o-animation: fadein 8s; /* Opera */
+}
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
