--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,119 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: white;
+  background: #2c3e50; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #4ca1af,
+    #2c3e50
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #4ca1af,
+    #2c3e50
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+a {
+  color: white;
+}
+
+/*** HEADER ***/
+header {
+  background-color: #056676;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 200px;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.site-name {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+nav {
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+/**** BIG NEWS ****/
+
+section {
+  display: flex;
+  /* width: 100%;
+  height: 100%; */
+  background: green;
+  flex-direction: column;
+  margin: 40px;
+  border: 4px solid black;
+  justify-content: space-around;
+}
+
+img {
+  width: 90%;
+  height: 90%;
+  margin: 20px;
+}
+
+/*** MEDIA QUERIES ***/
+
+@media (min-width: 668px) and (max-width: 1024px) {
+  .site-name {
+    display: none;
+  }
+
+  nav {
+    width: 100%;
+    display: flex;
+  }
+
+  section {
+    flex-direction: row;
+    background-color: rgb(126, 161, 73);
+    flex-wrap: wrap;
+  }
+
+  img {
+    width: 40%;
+  }
+}
+
+@media (min-width: 1024px) {
+  nav {
+    width: 50%;
+    display: flex;
+  }
+
+  .site-name-tablet {
+    display: none;
+  }
+
+  section {
+    flex-direction: row;
+    background-color: rgb(255, 47, 47);
+    flex-wrap: wrap;
+  }
+
+  img {
+    width: 20%;
+  }
 }
