--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,285 @@
-html {
-  background: #0025ff;
-  color: #fff;
+.mainContent{
+  margin: 0;
+}
+
+section, header, footer{
+  margin: 0;
+  padding: 20px;
+}
+
+body{
+  margin:0px;
+}
+
+.mainContent {
+  background: #fff;
+}
+
+.bignews {
+  background: #3b5249;
+  height: 30vh;
+  display:flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  justify-content: space-between;
+  
+}
+.bigNewsBox1{
+  flex-grow: 3;
+  max-height: 100%;
+  min-width: 300px;
+  position: relative;
+}
+
+.bigNewsSmallText{
+    position: absolute;
+    right: 20px;
+    left: 10%;
+    top: 10%;
+    color:white;
+}
+
+
+.bigNewsBox2{
+  flex-grow: 1;
+  background-color: #a4b494;
+  min-width: 300px;
+  display:none;
+  
+}
+
+.bigNewsImg1{
+  max-width: 80vw;
+  max-height: 100%;
+  object-fit: cover;
+  opacity: 0.5;
+}
+
+.bigNewsText{
+ display: none;
+}
+
+
+.wrap {
+  margin: auto;
+  max-width: 80vw;
+}
+
+
+.flex-container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+}
+
+/*
+header {
+  background: #382933;
+  color: white;
+  min-height: 10vh;
+
+  display: flex;
+}*/
+
+.flex-header{
+  display: flex;
+  flex-direction: row;  
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+  align-content: stretch;
+}
+/*
+li{
+  flex-grow: 1;
+  align-self: center;
+}
+*/
+
+/*Making the newsitems look like cards*/
+.newsItemCard {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  max-width: 300px;
+
+  margin: 15px;
+}
+
+.newsImg{
+  max-width: 100%;
+}
+
+.newsItemCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transform: scale(1.05)
+}
+
+.cardTextContainer {
+  padding: 2px 16px;
+}
+
+.newsItemCardSubject {
+  background-color: #519872;
+  height: 10%;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.content {
+  background: #fff;
+  color: black;
+}
+
+
+footer {
+  background: #a4b494;
+}
+
+
+
+
+/*Phone*/
+@media screen and (max-width: 414px)
+{
+  .title{
+    display: none;
+  }
+  
+}
+
+
+/*For tablets */
+@media screen and (min-width: 640px){
+  .flex-container {
+      display: flex;
+  }    
+
+  .main-nav{ 
+    display: block;
+  }
+  .bigNewsBox1 {
+    min-width: 300px;
+    max-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: unset;
+}
+  
+  .bigNewsBox2{
+    flex-grow: 1;
+    background-color: #a4b494;
+    min-width: 300px;
+    max-height: 100%;
+    display : block;
+  }
+
+  .bigNewsImg1 {
+    min-width: 60vw;
+    max-height: 100%;
+    object-fit: cover;
+    opacity: 1;
+}
+.bigNewsText{
+  display: inline-block;
+  align-self: center;
+  min-height: 100%;
+  margin-left: 1em;
+  color: white;
+ }
+
+.newsItemCard{
+  
+  flex-basis: 40%;
+}
+
+.bigNewsSmallText{
+  display: none;
+}
+  
+}
+
+/*Media query for desktop*/
+@media (min-width: 1025px) {
+
+  .main-nav{ 
+    display: block;
+  }
+  .newsItemCard{
+    margin: 15px;
+    max-width: 300px;
+    flex-basis: 20%;
+  }
+  
+  .bigNewsText{
+    display: inline-block;
+   }
+}
+
+
+/*CSS for the new header*/
+
+header{
+  background-color: #333;
+  color: white;
+	display:flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  float: right;
+  border: 1px solid #fff;
+}
+
+.logo{
+  display: inline-block;
+}
+
+.logoimage{
+  max-width: 50px;
+  max-height: 50px;
+  display: inline-block;
+  border: 1px solid white;
+  margin-right: 30px;
+}
+
+.title {
+  /*Flexgrow 2 för att titeln ska ta mer plats i flexboxen och justeras till vänster*/
+  flex-grow: 2;
+    border: 1px solid white;
+    font-size: 3em;
+    margin: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 25px;
+  text-decoration: none;
+}
+
+.icon {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+}
+
+li a:hover {
+  background-color: #111;
 }
