--- a/code/style.css
+++ b/code/style.css
@@ -28,12 +28,44 @@ ul {
    font-weight: 400;
  }
 
- .main-news img {
-   width: 100%;
+.main-news img {
+    width: 100%;
  }
+
+h1 {
+  position: absolute;
+  text-align: center;
+  top: 550px;
+  color: white;
+  font-size: 150px;
+  margin: 0;
+  font-family: 'Lobster', cursive;
+  width: 100%;
+}
+
+h1:hover {
+  color: black;  
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+}
 
 .news-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+}
+
+.news {
+  margin: 20px;
+}
+
+.news img {
+  width: 300px;
+  border-radius: 8px;
+}
+
+h2 {
+  font-family: 'Catamaran', sans-serif;
+  font-weight: 400;
+  margin: 0;
 }
