--- a/code/style.css
+++ b/code/style.css
@@ -57,6 +57,19 @@ h1:hover {
 
 .news {
   margin: 20px;
+  padding: 10px;
+  width: 300px;
+  border: white;
+  border-style: dotted;
+  border-radius: 8px;
+  border-width: 4px;
+}
+
+.news:hover {
+  border: black;
+  border-style: dotted;
+  border-radius: 8px;
+  border-width: 4px;
 }
 
 .news img {
@@ -68,4 +81,8 @@ h2 {
   font-family: 'Catamaran', sans-serif;
   font-weight: 400;
   margin: 0;
+  width: 300px;
+  line-height: 25px;
+  padding: 5px;
+  font-size: 20px;
 }
