--- a/code/style.css
+++ b/code/style.css
@@ -6,27 +6,23 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
-  color: white;
-  background: #2c3e50; /* fallback for old browsers */
+  background: #5eaaa8; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #4ca1af,
-    #2c3e50
+    #a3d2ca,
+    #5eaaa8
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #4ca1af,
-    #2c3e50
+    #a3d2ca,
+    #5eaaa8
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-a {
-  color: white;
 }
 
 /*** HEADER ***/
 header {
-  background-color: #056676;
+  color: #056676;
+  background-color: #e8ded2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -36,7 +32,6 @@ header {
 .logo {
   width: 100px;
   height: 100px;
-  border-radius: 50%;
 }
 
 .site-name {
@@ -52,6 +47,7 @@ nav {
 }
 
 nav a {
+  color: #056676;
   text-decoration: none;
 }
 
@@ -72,6 +68,14 @@ img {
   width: 90%;
   height: 90%;
   margin: 20px;
+}
+
+/*** FOOTER ***/
+
+.footer {
+  height: 80px;
+  background-color: #056676;
+  color: #e8ded2;
 }
 
 /*** MEDIA QUERIES ***/
