--- a/code/style.css
+++ b/code/style.css
@@ -4,19 +4,30 @@ body {
 }
 
 /* HEADER STYLING */
-
-/* Header for mobile */
 h1 { /*added this line because a margin of 24px is auto added for some reason on mobile version */
   margin: 0;
   font-family: 'Righteous', cursive;
 }
 
-.mobile-header {
+nav {
   background-color: black;
   color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.left-links, .right-links {
+  display: none;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.left-links:hover, .right-links:hover {
+  color:#FF2183;
 }
 
 .logo {
@@ -42,50 +53,6 @@ h1 { /*added this line because a margin of 24px is auto added for some reason on
   80% { transform: translate(-1px, -1px) rotate(1deg); }
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-/* Header for tablet */
-.tablet-header {
-  display: none;
-  background-color: black;
-  width: 100%;
-  height: 70px;
-}
-
-.tablet-header a {
-  padding: 0 20px;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.tablet-header a:hover {
-  color:#FF2183;
-}
-
-/* Header for desktop */
-.desktop-header {
-  display: none;
-  width: 100%;
-  background-color: black;
-  color: white;
-  height: 70px;
-}
-
-.desktop-logo {
-  display: flex;
-  align-items: center;
-}
-
-.desktop-header a {
-  padding: 0 40px;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.desktop-header a:hover {
-  color:#FF2183;
 }
 
 /* BIG NEWS SECTION STYLING */
@@ -210,14 +177,30 @@ footer a:hover {
 
 /* Tablet */
 @media (min-width: 667px) and (max-width: 1024px) {
-  .tablet-header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+  h1 {
+    display: none;
   }
 
-  .mobile-header {
-      display: none;
+  .logo {
+    order: 1;
+  }
+
+  .left {
+    order: 0;
+    display: flex;
+  }
+
+  .right {
+    order: 2;
+    display: flex;
+  }
+
+  .left-links, .right-links {
+    display: block;
+  }
+
+  nav {
+    justify-content: center;
   }
 
   .big-news-container {
@@ -254,20 +237,19 @@ footer a:hover {
 
 /* Desktop */
 @media (min-width: 1025px) {
-  .desktop-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+  .left-links, .right-links {
+    display: block;
   }
 
-  .mobile-header {
-      display: none;
+  .right, .left {
+    display: flex;
+    margin-left: auto;
   }
 
-  .tablet-header {
-      display: none;
+  .right {
+    margin-left: 0;
   }
-
+  
   .big-news-container {
       display: flex;
       flex-direction: row;
