--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,264 @@
-html {
-  background: #0025ff;
-  color: #fff;
+html { f
+  ont-size: 22px;
+ }
+
+body { 
+  padding: 1rem; 
+}
+
+
+
+/* The Overlay (background) */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */    
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+  position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px
+  }
+
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+
+/*** HEADING ***/
+
+header {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  color: black;
+  margin-bottom: 20px;
+  box-shadow: 5px 5px 5px 2px grey;
+
+}
+
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 10px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px; 
+}
+
+.hamburger div {
+  width: 20px;
+  height: 1px;
+  background: black;
+  border-radius: 5px;
+}
+
+
+nav {
+    display: none;
+    
+}
+
+  a:hover, a:active {
+    text-decoration: underline;
+  }
+  
+
+
+/*** CARDS ***/
+
+.cards {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1rem;
+}
+
+.card {
+  color: black;
+  height: 25rem;
+  margin: 5px;
+  box-shadow: 5px 5px 5px 5px grey;
+  display: flex;
+  flex-direction: column;
+  align-items:  center;
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.card:hover {
+  opacity: 0.3;
+}
+
+.cards a:hover {
+  background-color: black;
+}
+
+.cards a:link {
+  text-decoration: none;
+}
+
+.cards img {
+  width: 100%;
+  height: 70%;
+}
+
+.cards h4 {
+  margin:0;
+  font-size: 30px;
+}
+
+.cards h5 {
+  margin:5px;
+  font-size: 20px;
+}
+
+.cards p {
+  margin:0;
+  font-size: 15px;
+}
+
+img {
+  -webkit-filter: grayscale(100%); 
+  filter: grayscale(100%);
+}
+
+/*** FOOTER ***/
+
+
+
+@media (min-width: 668px) and (max-width:1024px) {
+  .cards {
+     grid-template-columns: repeat(2, 1fr);
+    }
+
+  header {
+    justify-content: space-between;
+    height: 100px;
+  }
+  h1 {
+    font-size: 60px;
+    padding-left: 20px;
+  }
+  a {
+    font-size: 20px;
+  }
+
+  nav {
+    display: inline-block;
+  }
+
+  nav a {
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    margin-left: 26px;
+    
+  }
+  
+  .menu {
+    height: 30px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 0 20px 0;
+    box-shadow: 5px 5px 5px grey;
+  }
+ 
+  .hamburger {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .cards { grid-template-columns: repeat(3, 1fr); }
+
+  header {
+    justify-content: space-between;
+    height: 150px;
+}
+h1 {
+  font-size: 80px;
+  padding-left: 20px;
+}
+a {
+  font-size: 20px;
+}
+
+nav {
+    display: inline-block;
+    
+}
+
+nav a {
+  font-size: 23px;
+  color: black;
+  text-decoration: none;
+  margin-left: 26px;
+}
+
+
+.menu {
+  height: 40px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 0 20px 0;
+  box-shadow: 5px 5px 5px grey;
+}
+
+.hamburger {
+    display: none;
+}
+
 }
