--- a/code/style.css
+++ b/code/style.css
@@ -1,113 +1,10 @@
-html {
+body {
   background: #CFBDB1;
-  color: black;
-}
-
-/*** HEADER ***/
-.logo { /*all imgs in header*/
-  width: 250px;
-  height: 250px;
-  margin-right: 800px;
-  padding-top: 0;
-}
-
-.order-1 {
-  order: 1;
-}
-
-.order-2 {
-  order: 2;
-}
-
-/*** NAVBAR ***/
-nav {
-  width: 50%;
-  display: flex;
-  /**border: 2px solid blue;**/
-  justify-content: space-between;
-  padding: 20px;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.nav a {
-  color: #312f2d;
-  text-decoration: none;
-  padding: 5px;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 20px;
-  margin-left: 50px;
-  margin-right: 0;
-  justify-content: space-around;
-}
-
-/*** BIG NEWS SECTION ***/
-.big-news-container{
-  width: 100%;
-  display: block;
-}
-
-.big-news-container img {
-  display: block;
-  border: 0;
-  max-width: 50%;
-  max-height: 50%; 
-  margin: 0 100px; 
-}
-
-.big-news-container-paragraph {
-  display: flex;
-  width: auto;
-  padding: 50px;
-  margin: 0 100px;
-  text-align: justify;
-}
-
-.big-news-container-paragraph h3 {
-  display: block;
-  padding: 10px 0;
-  /* margin-left: 150px; */
-  text-transform: uppercase;
-  font-weight: 300;
-  justify-content: left;
-}
-
-@media (max-width: 700px) {
-  .order-1 {
-    order: 1;
-  }
-
-  .order-2 {
-    order: 2;
-  }
-}
-
-header {
-  background-color: #CFBDB1;
-  display: flex;
-  align-items: right;
-  margin: 50px;
-  padding: 15px;
   color: #312f2d;
 }
-
-nav {
+.landing-img {
   width: 50%;
-  display: flex;
-  /**border: 2px solid blue;**/
-  justify-content: space-between;
-  padding: 20px;
-  overflow: hidden;
-  white-space: nowrap;
+  display: grid;
+  place-items: center;
+  margin: 0 auto;
 }
-
-
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-p {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
