--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,39 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+/**** Header ****/
+
+header {
+  background-color: white;
+  display: flex
+
+}
+
+nav {
+  border: 1px solid blue;
+}
+
+h1 {
+  font-family: Helvetica;
+
+}
+
+
+.logo {
+  width: 50px;
+  height: 50px;
+}
+
+p {
+  font-family: "Times New Roman";
+
+}
+
+/**** Big News ****/
+
+
+
+
+/**** News Grid ****/
+
