--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     margin: 0;
 }
 
-body {
-    height: 100vh;
+html, body {
+    height: 100%;
     box-sizing: border-box;
 }
 
@@ -25,55 +25,103 @@ header {
 .navbar {
     height: 60px;
     background-color: transparent;
+}  
+
+.navbar-menu {
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.navbar-item {
+
+.navbar-menu-item {
+    display: flex;
     text-transform: uppercase;
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
     letter-spacing: 2px;
-    flex: 1 1 auto;
-    text-align: right;
+    flex: 1 1 10vw;
+    justify-content: flex-end;
 }
 
 .logo {
-    flex: 2 1 33%;
-    padding-left: .5em;
-    font-family: 'Reenie Beanie', cursive;
+    display: flex;
+    font-family: 'Caveat Brush', cursive;
     font-size: 2.5em;
-    text-align: left;
 }
 
 /*** NAVBAR LINK STYLE ***/
-a.logo {
+.logo a {
     color: #F8FF6E;
 }
 
-a.logo:hover {
+.logo a:hover {
     opacity: .8;
 }
 
-a.navbar-item:hover {
+.nav-link:hover {
     color: lightgrey;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 599px) {
+   
+    .navbar {
+        height: auto;
+    }
+    .navbar-menu {
+        margin: 0;
+        flex-wrap: wrap;
+    }
 
+    .navbar-menu-item {
+        flex: 0 1 auto;
+        align-items: center;
+    }
+
+    .logo {
+        order: -1;
+        flex: 0 1 100vw;
+        justify-content: center;
+        font-size: 3em;
+    }
 }
 
-@media (max-width: 900px) {
+@media screen and (max-width: 899px) {
+    .navbar-menu {
+        margin: 0 2em;
+    }
+    
     .item-1 {
         order: -1;
+        text-align: left;
+    }
+    
+    .logo {
+        text-align: center;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 1199px) and (max-width: 1199px) {
+    .navbar-menu {
+        margin: 0 2em;
+    }
+
+    .item-1 {
+        order: -1;
+        justify-content: flex-start;
     }
 
     .logo {
         text-align: center;
+        justify-content: center;
     }
 }
 
-@media (min-width: 1200px) {
-
+@media screen and (min-width: 1200px) {
+    .logo {
+        flex: 2 1 33vw;
+        padding-left: .5em;
+        justify-content: left;
+    }
 }
