--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,244 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  max-width: 100%;
+}
+
+body {
+  background: #fffffc;
+  font-family: 'Merriweather', serif;
+  margin: 0 auto;
+  max-width: 100%;
+}
+
+section {
+  max-width: 100%;
+  margin: 0;
+} 
+
+h2 {
+  font-size: 30px;
+  line-height: 34px;
+}
+
+h3 {
+  text-align: center;
+  font-size: 27px;
+  color: #797a7e;
+}
+
+h4 {
+  font-size: 12px;
+  font-weight: 50;
+  color: #797a7e;
+}
+
+p {
+  font-size: 15px;
+}
+
+/**HEADER**/
+
+header {
+  background:#ffffff;
+  height: 80px;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hamburger {
+  display: flex;
+  height: 30px;
+  width: 30px; 
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;   
+}
+
+.hamburger div {
+  height: 6px;
+  width: 30px;
+  background: #283c63;
+  border-radius: 5px;
+}
+
+header {
+  width: 100%;
+}
+
+header img {
+  width: 80px;
+  height: 80px;
+  margin: 0 20px;
+  align-self: flex-start;
+}
+
+nav {
+  padding-right: 30px;
+}
+
+nav a {
+  color: #283c63;
+  text-decoration: none;
+  margin-left: 13px;
+}
+
+/** BIG NEWS**/ 
+
+.big-news .container {
+  padding: 50px 18px;
+  display: flex; 
+  flex-direction: column; 
+  color: #283c63;  
+}
+
+.big-news img {
+  width: 100%;
+  margin: 30px;
+}
+
+.big-news div {
+  text-align: center;
+}
+
+/** CONTAINERS**/
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto; 
+  width: 100%;
+}
+
+.information {
+  background: #e0ece4;
+  color: #797a7e;
+  text-align: center;
+  padding: 30px;
+  margin: 0px;
+}
+
+.cards .container {
+  display: flex; 
+  flex-wrap: wrap;
+}
+
+.cards a {
+  border: 1px solid #797a7e;
+  border-radius: 5px; 
+  background-color: #f4f4f4;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+  /* box-shadow: 0 10px 10px 0 gray; */
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+  flex-grow: 1;
+
+  -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.cards a:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  
+  box-shadow: 0 20px 20px 0 gray;
+}
+
+.cards a img {
+  width: 80%;
+}
+
+/** OTHER NEWS **/ 
+
+.other-news {
+  background-color: #e5e5e5;
+  padding: 50px 18px;
+  display: flex; 
+  flex-direction: column; 
+  color: #283c63;  
+}
+
+.other-news img {
+  width: 40%;
+}
+
+/** FOOTER**/ 
+
+footer {
+  background:#fff;
+  height: 80px;
+  padding: 0 16px;
+  display: flex;  
+  margin-bottom: 0;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  color: #283c63;
+  font-size: 12px;
+}
+
+footer div {
+  display: flex;
+  align-items: center;
+}
+footer img {
+  height: 80px; 
+  width: 80px; 
+}
+
+/** MEDIA QUERIES**/
+
+@media (max-width: 540px) {
+  
+  
+
+  .big-news div {
+    text-align: left;
+  }
+
+  .cards a {
+      width: 100%;
+  }
+}
+
+@media (min-width: 668px) and (max-width: 1024px) {
+ 
+  .cards a {
+      width: 40%;
+      margin: 20px;
+    }
+}
+
+@media (max-width: 1024px) {
+
+    nav {
+      display: none;
+    }
+}
+
+@media (min-width: 1024px) {
+  .big-news .container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .big-news img {
+    width:50%;
+  }
+
+  .cards a {
+    width: 15%;
+    margin: 20px;
+  } 
+
+  .hamburger {
+    display: none;    
+  }  
+
+  nav {
+    display: inline-block;
+  }
 }
