--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,50 @@
-html {
-  background: #0025ff;
+@font-face {
+  font-family: compactaItalic;
+  src: url("CompactaItalicRegular.ttf");
+}
+
+body {
+  background: #fff;
+  color: #000000;
+  font-family: compactaItalic, sans-serif;
+  margin: 0;
+}
+
+/*** HEADER ***/
+
+header {
+  background: #000;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  padding: 30px 40px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 3px;
+  background: #fff;
+  border-radius: 5px;
+}
+
+header img {
+  width: 180px;
+}
+
+nav {
+  display: none;
+}
+
+nav a {
   color: #fff;
+  text-decoration: none;
 }
