--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,100 @@
-html {
-  background: #0025ff;
-  color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=David+Libre&family=Roboto:wght@700&display=swap');
+
+body {
+  background: #fff;
+  color: #000;
+  margin: 0;
 }
+
+                                    /*  HEADER BELOW */
+header {
+  height: 80px;
+  background-color: #F7F1EE;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  justify-content: space-between;
+  box-shadow: 0 5px 5px 0px rgba(51, 51, 51, 0.3);
+}
+
+header img {
+  width: 50px;
+  height: 50px;
+  margin-left: 20px;
+  margin-right: 10px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background-color: #47353A;
+  border-radius: 5px;
+}
+
+header h1 {
+  font-family: 'David Libre', serif;
+  font-weight: 400;
+  color: #47353A;
+  font-size: 36px;
+}
+
+header nav {
+  display: none;
+}
+
+header nav a {
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  color: #47353A;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-left: 10px;
+  transition: border 0.2s 0.3s ease-in;
+  border-bottom: solid 2px rgba(0, 0, 0, 0);
+}
+
+header nav a:hover {
+  border-color: #47353A;
+}
+
+header nav a:last-child {
+  margin-right: 20px;
+}
+
+@media (min-width: 620px) {
+  header h1 {
+    font-size: 48px;
+  }
+}
+
+@media (min-width: 768px) {
+  header h1 {
+    font-size: 66px;
+  }
+  
+  header nav {
+    display: inline-block;
+  }
+  
+ .hamburger {
+    display: none;
+}
+
+@media (min-width: 1024px) {
+  
+}
+
+}
+
